--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title> My web page </title>
 	<style>
 		body {
-			background-color: red;
+			background-color: green;
 		}
 		
 		h1 {
@@ -18,6 +18,7 @@
 
 	<div align = "center">
 		<h1>Hello World</h1>
+		<h2>Have a nice day</h2>
 	</div>
 
 </body>
